--- a/app/views/admin/lookbooks/edit.html.erb
+++ b/app/views/admin/lookbooks/edit.html.erb
@@ -1,7 +1,11 @@
 
 <header>
   <h2 class="left"><span>首頁管理 / </span>穿搭主題</h2>
-  <nav class="left"> <%= link_to '基本', edit_admin_lookbook_path(@lookbook), class: 'active' %> <%= link_to '圖片', admin_lookbook_tiles_path(@lookbook)%> <%#= "此穿搭主題限制關聯主題數：#{@lookbook.limit}, 已關聯主題數：#{@lookbook.lookbook_topicships.count}" %> </nav>
+  <nav class="left"> 
+    <%= link_to '基本', edit_admin_lookbook_path(@lookbook), class: 'active' %> 
+    <%= link_to '圖片', admin_lookbook_tiles_path(@lookbook)%> 
+    <%= link_to '排序', sort_admin_lookbook_tiles_path(@lookbook)%> 
+  </nav>
 </header>
 <article>
   <div class="hgroup"> <%= form_for(@lookbook, :url => admin_lookbook_path(@lookbook), html: { id: "patchthislookbook", multipart: true } ) do |f| %>
@@ -16,15 +20,7 @@
     </table>
     <% end %>
   </div>  
-  <!--div id='dragable_container' class='gallery' style='width:100%;'>
-    <% @lookbook.tiles.each do |tile| %>
-    <div class='dragable Tilecontainer thumb left' <%= "id=Tilecontainer_#{tile.id.to_s}" %> > <%= link_to "#{tile.id}", admin_lookbook_tiles_path(@lookbook) %>
-      <% if tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first %>
-      <%= link_to( image_tag(tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first.attachment.url, class: 'img-responsive', width: 100, height: 100 ) , 'javascript:void(0);') %>
-      <% end %>
-    </div>
-    <% end %>
-  </div-->
+  
   <% if @lookbook.lookbook_topicships.count < @lookbook.limit %>
   <div class="form"> <%= form_for(@lookbook_topicship, :url => admin_lookbook_topicships_path(), html: { id: "newthislookbook_topicship" } ) do |f| %>
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -56,15 +52,15 @@
         <td colspan="2" class="icon"><img src="/images/admin/folder.png"> <%= Topic.find(ship.topic_id).name %></td>
         <td width="18%"><div class='tool'> <%= link_to '', admin_lookbook_topicship_path(ship.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %> </div></td>
       </tr>
-      <% @lookbook.topics.each do |topic| %>
-      <% topic.products.each do |product| %>
-      <tr>
-        <td width="5%" class="icon">├</td>
-        <td width="75%"><%= product.name %><%#= product.price %><%#= product.price_for_sale %></td>
-        <td></td>
-      </tr>
-      <% end %>
-      <% end %>
+        <% @lookbook.topics.each do |topic| %>
+          <% topic.products.each do |product| %>
+            <tr>
+              <td width="5%" class="icon">├</td>
+              <td width="75%"><%= product.name %><%#= product.price %><%#= product.price_for_sale %></td>
+              <td></td>
+            </tr>
+          <% end %>
+        <% end %>
       <% end %>
       
     </table>
@@ -73,54 +69,3 @@
     <div class="button"> <%= link_to image_tag("/images/admin/left.png")+"返回", admin_lookbooks_path(), class: "left" %> <a href="javascript: document.getElementById('patchthislookbook').submit();" id="sendtheform" class="right highlight" data-no-turbolink = true >儲存 <img src="<%= image_path("/images/admin/save.png") %>"> </a> </div>
   <% end %>
 </article>
-<script>
-  $(function() {
-    var prevEvent = null;
-      $( "#dragable_container" ).sortable({
-        items: "> .dragable" ,
-        placeholder: "ui-state-highlight",
-        update: function( event, ui ) {
-            
-          if(event.timeStamp == prevEvent){
-            return null;
-          }
-          
-          prevEvent = event.timeStamp;  
-          var newRankings_array = $('#dragable_container').sortable('toArray');
-          var orderSet = [];
-          $.each(newRankings_array, function( index, value){
-                orderSet.push(value.replace("Tilecontainer_",""));
-            });
-            var order2Push = JSON.stringify(orderSet);
-            
-            $.ajaxSetup({
-              headers: {
-                  'X-CSRF-Token': $('meta[name="csrf-token"]').attr('content')
-            }
-          });
-
-          // reorder 
-          $.ajax({
-            type: "PATCH",
-            url: "/admin/tiles/"+orderSet[0]+"/reorder",
-            data: { tiles: {  reorderset: orderSet } },
-            success: function(data){
-              //$("#dragable_container > .thumb").attr('class', 'thumb left Attachcontainer dragable');
-              //$("#dragable_container > .thumb:first").attr('class', 'cover thumb left Attachcontainer dragable');
-              alertify['success'](data[0][1], 2000);
-              
-              return false   
-            },
-            error: function(data){
-            
-              return false  
-            }
-          });
-
-        }
-      });
-      
-        
-      $( "#dragable_container" ).disableSelection();
-    });  
-  </script> 
