--- a/app/views/products/_show_product_quickview.html.erb
+++ b/app/views/products/_show_product_quickview.html.erb
@@ -39,7 +39,8 @@
       slideWidth: 380,   
       mode:'vertical',
       pagerCustom:'#qv-thumb',
-      controls: false
+      controls: false,
+      mode: 'fade'
     }); 
 
     
