--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -53,7 +53,7 @@
                 <span class="checbox-container">
                   <i class="fa fa-check"></i>
                 </span>
-                <label for="forgotten">
+                <label for="agree_privacy">
 
                   我已閱讀<%= link_to "服務條款", page_pages_path("terms") %>
                   並同意註冊成為會員<br>I have reed and agree to the 
