--- a/app/views/categories/_product_grid.html.erb
+++ b/app/views/categories/_product_grid.html.erb
@@ -37,11 +37,11 @@
                     <%= form_for(tracking_list,:url => useradmin_tracking_lists_path(tracking_list), :html => {:id =>'NewTrackingListForm' } ) do | f |%>
                       <%= f.hidden_field :user_id, value: current_user.id , class: 'text' %>
                       <%= f.hidden_field :product_id, value: product.id, class: 'text' %>
-                      <%= f.submit "Favorite", class: "icon-button icon-like",title: 'Favorite' %>
+                      <%= f.submit "Favorite", class: "icon-button icon-like",title: 'Add to Favorites' %>
                       <a class='inline icon-button icon-compare pdquickview' data-pd='<%= product.id %>' title="Quick View" ></a> 
                     <% end %>
                   <% else %>
-                    <%= link_to '', useradmin_tracking_lists_path, class: "icon-button icon-like",title: 'Favorite' %>
+                    <%= link_to '', useradmin_tracking_lists_path, class: "icon-button icon-like",title: 'Add to Favorites' %>
                     <a class='inline icon-button icon-compare pdquickview' data-pd='<%= product.id %>' title="Quick View" ></a> 
                   <% end %>
                 </div>
