--- a/app/views/products/_add_to_cart.html.erb
+++ b/app/views/products/_add_to_cart.html.erb
@@ -20,14 +20,14 @@
   </div>
   <hr>
   <br>
-  <%= button_tag "<span>加入購物車</span><br>ADD TO CART".html_safe, class: "btn mainBtn", data: {disable_with: "加入購物車..."} %>
+  <%= button_tag "<span>加入購物車</span><br>ADD TO CART".html_safe, class: "btn mainBtn", data: {disable_with: "加入購物車..."}, title: "加入購物車" %>
 <% end %>
 <% if current_user %>
   <% tracking_list = TrackingList.new %>
   <%= form_for(tracking_list,:url => useradmin_tracking_lists_path(tracking_list), :html => {:id =>'NewTrackingListForm' } ) do | f |%>
     <%= f.hidden_field :user_id, value: current_user.id , class: 'text' %>
     <%= f.hidden_field :product_id, value: @product.id, class: 'text' %>
-    <%= f.submit "", class: "icon-button icon-like"  %>
+    <%= f.submit "", class: "icon-button icon-like", title: "Add to Favorites"  %>
   <% end %>
 <% else %>
   <%= link_to '', useradmin_tracking_lists_path, class: "icon-button icon-like" %>
