--- a/app/views/products/_fake_add_to_cart.html.erb
+++ b/app/views/products/_fake_add_to_cart.html.erb
@@ -15,14 +15,14 @@
   </div>
   <hr>
   <br>
-  <%= button_tag "<span>已售完</span><br>SOLD OUT".html_safe, class: "btn mainBtn soldOut" %>
+  <%= button_tag "<span>已售完</span><br>SOLD OUT".html_safe, class: "btn mainBtn soldOut", title: "已售完" %>
 
   <% if current_user %>
     <% tracking_list = TrackingList.new %>
     <%= form_for(tracking_list,:url => useradmin_tracking_lists_path(tracking_list), :html => {:id =>'NewTrackingListForm' } ) do | f |%>
       <%= f.hidden_field :user_id, value: current_user.id , class: 'text' %>
       <%= f.hidden_field :product_id, value: @product.id, class: 'text' %>
-      <%= f.submit "", class: "icon-button icon-like"  %>
+      <%= f.submit "", class: "icon-button icon-like", title: "Add to Favorites"  %>
     <% end %>
   <% else %>
     <%= link_to '', useradmin_tracking_lists_path, class: "icon-button icon-like" %>
