--- a/public/css/pageProdPickup.css
+++ b/public/css/pageProdPickup.css
@@ -13,17 +13,16 @@ h3.title span { font: 0.8em Helvetica, Microsoft JhengHei, "微軟正黑體"!imp
 .categoryTitle { border-top-width: 5px; border-top-style: solid; border-top-color: #c9006e; }
 .accordion-title > span { margin: 0 5px; text-transform: none; font: 1.0em Helvetica, Microsoft JhengHei, "微軟正黑體"; line-height: 1.5em; }
 .accordion-header { background: #FFFFFF; padding: 4px 10px; border: 1px solid #f2f2f2; position: relative; margin-bottom: 10px; }
+.panel .accordion-header { padding:0;margin:0; }
+.panel .accordion-title{ padding:0;margin:0;}
+.panel .accordion-title > span{ display: block;margin:0px;}
+.panel .accordion-title span a{ display: block;padding:15px 20px;}
 .sm-accordion.custom-accordion .panel-body { padding: 0px!important; background: #f6f6f6; border: none; color: #565957; }
 .category-filter-list li { color: #565957; background-image: url(../images/img_list.gif); background-repeat: no-repeat; background-position: 40px center; margin-bottom: 0; margin-top: 0; }
 .category-filter-list li a { width: 100%; height: 100%; display: block; padding-left: 20px; padding-top: 10px; padding-bottom: 10px; padding-left: 60px; }
 .category-filter-list li:hover { background-color: #fff799; }
 .category-filter-list.jscrollpane { overflow-y: hidden; }
-.accordion-btn { background-image: url('../images/btn_aside.png'); background-color: transparent; background-position: right center; border: none; border-radius: 0; overflow: hidden; display: block; }
-.accordion-btn:hover, .accordion-btn:focus { background-color: transparent; background-image: url('../images/btn_aside.png'); background-position: right 40px; }
-.sm-accordion .accordion-btn.opened:hover, .sm-accordion .accordion-btn.opened:focus { }
-.sm-accordion .accordion-btn.opened { background-image: none; width: 100%; height: 150%; top: -15px; }
-.sm-accordion .accordion-btn.collapsed { background-position: right 40px; background-image: url('../images/btn_aside.png'); width: 100%; height: 150%; top: -15px; }
- @media (min-width: 992px) and (max-width: 1200px) {
+@media (min-width: 992px) and (max-width: 1200px) {
 .title.viewed { width: 20%; min-width: 240px; }
 .container { margin-right: auto; margin-left: auto; padding-left: 0px; padding-right: 0px; }
 }
