--- a/public/css/pageProduct.css
+++ b/public/css/pageProduct.css
@@ -12,9 +12,12 @@ h3.title span { font: 0.8em Helvetica, Microsoft JhengHei, "微軟正黑體"!imp
 #product-carousel{text-align: center;}
 #zoom { background-image: url(../images/img_zoom.png); height: 40px; width: 40px; position: absolute; right: 0px; bottom: 0px; display: block;z-index:900; }
 #product-image-carousel-container { width: 100%; max-width: 560px; margin-right: 0px; padding: 20px 0 0 0; float: none; overflow: hidden; clear:both;}
-#product-image-carousel-container li { display: inline-block; margin-left: 2%; width: 15%; max-width: 90px;max-height:90px; white-space: nowrap;}
+#product-image-carousel-container ul { white-space: nowrap;}
+#product-image-carousel-container li { border:2px solid transparent;display: inline-block; margin-left: 0.8%;width:15%;white-space: nowrap;overflow: hidden;}
+#product-image-carousel-container li:hover {border-color:#c9006e;}
 #product-image-carousel-container li.markLi { margin-left: 0px; }
-#product-image-carousel-container li img{max-height:90px;height: 100%;border:2px solid transparent;}
+#product-image-carousel-container li img{width:100%;height: auto;}
+#product-image-carousel-container li.active-slide{border-color:#c9006e;}
 .col-md-6.col-sm-12.col-xs-12.product { width: 47%; }
 .product .product-name { font: normal 1.3em Helvetica, Microsoft JhengHei, "微軟正黑體"!important; color: #FFF; color: #FFF; }
 #prodTop .title span { font: normal 1.1em Helvetica, Microsoft JhengHei, "微軟正黑體"!important; padding: 0 0 0 0!important; display: block; }
@@ -41,7 +44,7 @@ label { color: #FFF; }
 .tableNote ol { padding-left: 20px; }
 .tableNote ol li { list-style-type: decimal; line-height: 1.5em; margin-bottom: 10px; font-size: 1em; text-align:left;}
 #favoritesBg .container { position: relative; margin: 0; padding: 0; width: 100%; z-index: 0; }
-.bgFav { background-color: #c9006e; position: absolute; height: 190px; width: 100%; left: 0px; top: 70px; }
+.bgFav { background-color: #c9006e; position: absolute; height: 190px; width: 100%; left: 0px; top: 67px; }
 .brand-slider a{padding:0;}
 .item .item-image-container figure{ min-width: 160px; height:160px;overflow:hidden;}
 .item:hover > .item-image-container .item-image { visibility: visible; opacity: 1; }
@@ -54,17 +57,19 @@ label { color: #FFF; }
 #content .img-responsive{width:auto;}
 @media (min-width: 992px) and (max-width: 1300px) {
 #prodTop .container { width: 100%; }
-.bgFav { top: 65px; }
 .title.favorites { width: 20%; min-width: 340px; }
 #content .container {width: 100%;}
 }
+@media (min-width: 992px) and (max-width: 1200px) {
+.bgFav { top: 65px; }
+}
 @media (min-width: 768px) and (max-width: 991px) {
 #prodTop .container { width: 100%; }
-.bgFav { top: 65px; }
 .title.favorites { width: 20%; min-width: 310px; }
 .title.viewed { width: 20%; min-width: 220px; }
 .col-md-6.col-sm-12.col-xs-12.product { width: 100%; }
 #content .container {width: 100%;}
+.bgFav { top: 63px; }
 }
 @media (max-width: 767px) {
 #content { margin-top: -40px; }
@@ -75,7 +80,7 @@ label { color: #FFF; }
 .title span { padding: 0 0 0 2%!important; }
 h2.title { background: none; }
 .title-bg:after { background: transparent; }
-.bgFav { top: 82px; }
+.bgFav { top: 85px; }
 #content .container { padding: 0; margin: 0; }
 .col-md-6.col-sm-12.col-xs-12.product { width: 100%; }
 #prodTop .container { width: 100%; padding-left: 0px; padding-right: 0px; padding-top: 30px; background-image: none; }
@@ -94,8 +99,6 @@ h2.title { background: none; }
 .cloud-zoom-lens {margin:0px;background-color:#fff;cursor:move;}
 .cloud-zoom-big { overflow: hidden; margin-top: 4px; margin-left: 4px; border: 1px solid #000;max-height: 560px; }
 .cloud-zoom-loading {color:white;background:#222;padding:0px;}
-.zoom-tiny-image:hover{border:2px solid #c9006e!important;}
-img.active-slide{border:2px solid #c9006e!important;}
 .mousetrap{max-height: 560px;}
 #zoom1{max-height: 560px;}
 @media (max-width: 767px) {
