--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,6 +102,13 @@
   <script src="/js/jquery.colorbox.js"></script> 
   <script src="/js/jquery.bxslider.min.js"></script> 
   <script src="/js/main.js"></script> 
+  <script src="/js/jquery.placeholder.js"></script>
+  <script>
+    $(function() {
+      $('input, textarea').placeholder();
+    });
+  </script>
+  
   <!--LightBox Start**************************************************************************************************************-->
 <div id="lightBox">
   <div id="inline_content">
