--- a/app/views/layouts/cart.html.erb
+++ b/app/views/layouts/cart.html.erb
@@ -91,7 +91,13 @@
   <script src="/js/jquery.flexslider-min.js"></script> 
   <script src="/js/jquery.themepunch.plugins.min.js"></script> 
   <script src="/js/jquery.themepunch.revolution.min.js"></script> 
-  <script src="/js/main.js"></script> 
+  <script src="/js/main.js"></script>
+  <script src="/js/jquery.placeholder.js"></script>
+  <script>
+    $(function() {
+      $('input, textarea').placeholder();
+    });
+  </script> 
   <!--LightBox Start**************************************************************************************************************-->
 <div id="lightBox">
   <div id="inline_content">
