--- a/app/views/layouts/useradmin.html.erb
+++ b/app/views/layouts/useradmin.html.erb
@@ -97,6 +97,12 @@
   <script src="/js/jquery.themepunch.revolution.min.js"></script> 
   
   <script src="/js/main.js"></script> 
+  <script src="/js/jquery.placeholder.js"></script>
+  <script>
+    $(function() {
+      $('input, textarea').placeholder();
+    });
+  </script>
   <!--LightBox Start**************************************************************************************************************-->
 <div id="lightBox">
   <div id="inline_content">
