--- a/public/css/ie8.css
+++ b/public/css/ie8.css
@@ -1,6 +1,6 @@
-.bgBottom { bottom: 10px;z-index: 0; }
-.bottom{bottom:118px;}
-.item-image-container .item-price-container { line-height:85px;margin-top:0px!important;behavior: url(../css/border-radius.htc);}
+.bottom{display:none;}
+.item-price-container{ -ms-behavior: url(border-radius.htc);behavior: url(border-radius.htc);-moz-border-radius:500px;-webkit-border-radius: 500px;border-radius: 500px; }
+.item-image-container .item-price-container .item-price{ font-size:24px;line-height:85px;margin-top:0px!important;}
 .footer-text-container p { display:block;float:right;}
 .footer-text-container p:after { display:block;float:right;}
 #footer .fb-share-button { position: static;margin:50px 0 0 25px; }
