--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -18,7 +18,7 @@
 
 <% content_for :breadcrumb do %>
   <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; Lookbook
-  &nbsp; > &nbsp; <%= "#{@lookbook.name} #{@topic.name}" %>
+  &nbsp; > &nbsp; <%= "#{@topic.name}" %>
 <% end %>
 
 <% if @topic.galleries.select{ |v| v['type'] == 'TopicBannerGallery' }.first  %>
