--- a/public/css/ie8.css
+++ b/public/css/ie8.css
@@ -1,5 +1,5 @@
 .bottom{display:none;}
-.item-price-container{ -ms-behavior: url(border-radius.htc);behavior: url(border-radius.htc);-moz-border-radius:500px;-webkit-border-radius: 500px;border-radius: 500px; }
+.item-price-container{ background-image: url(../images/ie8_discount.png); filter: progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/ie8_discount.png', sizingMethod='cover');-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/ie8_discount.png', sizingMethod='cover')";}
 .item-image-container .item-price-container .item-price{ font-size:24px;line-height:85px;margin-top:0px!important;}
 .footer-text-container p { display:block;float:right;}
 .footer-text-container p:after { display:block;float:right;}
@@ -8,4 +8,4 @@
 .stepTag { padding-bottom: 10px;background-color: #313131;  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/bg_cartStep.png', sizingMethod='scale');-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader( src='../images/bg_cartStep.png', sizingMethod='scale')";}
 #quick-access{margin-top:20px!important;}
 .custom-checkbox .checbox-container{display: none;}
-
+.bgFav{width:150%;}
