--- a/app/views/admin/tiles/index.html.erb
+++ b/app/views/admin/tiles/index.html.erb
@@ -124,10 +124,9 @@
         </table>
       <% end %>
     </div>
-
   <% end %>
   <%# NEW %>
-  <div class="form list-new list-edit edit_tile" style="display:none;" >
+  <div class="form list-new edit_tile" style="display:none;" >
     <%= form_for(@tile, :url => admin_lookbook_tiles_path(@lookbook) , html: {id: "create_new_tile", :multipart => true }) do |f| %>
       <table width="100%" cellspacing="0" cellpadding="0">
         <tr>
