--- a/app/views/admin/topics/edit.html.erb
+++ b/app/views/admin/topics/edit.html.erb
@@ -2,7 +2,7 @@
       <h2 class="left">基本主題</h2>
       <nav class="left">
         <%= link_to '商品', edit_admin_topic_path(@topic), class: 'active' %>
-        <%= link_to '封面', admin_topic_photo_path(@topic) %>
+        <%= link_to '列表頁圖片', admin_topic_photo_path(@topic) %>
       </nav>
       <div class="explain right"><p>圖片尺寸：270px * 270px</p></div>
     </header>
